# PubChem-RAG-Agent

./: .dockerignore  .gitignore  README.md  docker-compose.yml  ingestion_api_wrapper.py  prometheus.yml  pubchem-agent-meeting-notes.md  pubchem_rag_analysis.py  pubchem_rag_analysis.txt  rag.py  readme-api.md  router.py  router_test_data.json  test_dataset.json  test_router.py  Класс_соединений.ipynb  новый файл для тестирования стажировка.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pyvenv.cfg
backend/.chainlit/: config.toml
backend/.chainlit/translations/: en-US.json  ru-RU.json
backend/public/: custom.css  custom.js  theme.json
backend/public/elements/: CompoundCard.jsx
backend/src/: chainlit_app.py
backend/src/app/: __init__.py  config.py  container.py  main.py
backend/src/app/adapter/: pubchem_adapter.py
backend/src/app/agent/: __init__.py  error_mapper.py  mcp_client.py  mcp_server.py  meta.py  model_factory.py  msp_server.py  prompts.py  rate_limiters.py  runtime.py  tools.py  tracing.py
backend/src/app/errors/: models.py  normalizer.py
backend/src/app/llm/: providers.py
backend/src/app/normalizers/: compound.py
backend/src/app/presenters/: __init__.py  compound_card.py
backend/src/app/schemas/: agent.py  common.py  interpret.py  query.py  schemas.py
backend/src/app/services/: agent_service.py  agent_stream_service.py  cache.py  interpret_service.py  pubchem_tools.py  (+3 more)
backend/tests/: test_api_routes.py  test_error_normalizer.py  test_health.py  test_interpret_service.py  test_query_service.py
(+69 files in other folders)
