[project]
name = "pubchem-compound-explorer-api"
version = "0.1.0"
description = "FastAPI backend для MVP-интерфейса запросов к PubChem."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.11.0,<5.0.0",
  "fastapi>=0.128.0,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "orjson>=3.11.0,<4.0.0",
  "pubchempy>=1.0.4,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "redis>=6.1.0,<7.0.0",
  "tenacity>=9.1.2,<10.0.0",
  "uvicorn[standard]>=0.38.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-asyncio>=1.2.0,<2.0.0",
  "respx>=0.22.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
